fix: center footer content on mobile

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -26,7 +26,7 @@
 
   @media (max-width: $mantine-breakpoint-xs) {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
   }
 }
 
